syntax = "proto3";

message DadIntProto {
	string key = 1;
	int32 value = 2;
	bool invalidRead = 3;
}
message TxRequest {
  string id = 1;
  repeated string reads = 2;
  repeated DadIntProto writes = 3;
}

message TxReply {
	repeated DadIntProto reads = 1;
}

message StatusRequest {}

message StatusReply {
	repeated string dead = 1;
	repeated string alive = 2;
	string tmName = 3;
}

service TmService {
  rpc TxSubmit (TxRequest) returns (TxReply);
  rpc Status (StatusRequest) returns (StatusReply);
}
