syntax = "proto3";

package pt.ulisboa.tecnico.DADTKV.BroadCastService;
import public "protos/Structures.proto";

message BroadRequest {
	repeated DadIntProto writes = 1;
	string tm_name = 2;
	repeated int32 epoch = 3;
}

message BroadReply {
	bool ack = 1;
}

service BroadCastService {
  rpc BroadCast (BroadRequest) returns (BroadReply);
}